WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132787
Headers and footers are not positioned correctly with topContentInset
https://bugs.webkit.org/show_bug.cgi?id=132787
Summary
Headers and footers are not positioned correctly with topContentInset
Beth Dakin
Reported
2014-05-10 15:26:44 PDT
Headers and footers are not positioned correctly with topContentInset <
rdar://problem/16641115
>
Attachments
Patch
(13.34 KB, patch)
2014-05-10 15:34 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-05-10 15:34:46 PDT
Created
attachment 231238
[details]
Patch
Tim Horton
Comment 2
2014-05-10 15:44:23 PDT
Comment on
attachment 231238
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231238&action=review
> Source/WebCore/page/scrolling/ScrollingCoordinator.cpp:225 > return 0;
nullptr these while you're here!
Sam Weinig
Comment 3
2014-05-10 16:04:46 PDT
Comment on
attachment 231238
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231238&action=review
> Source/WebCore/page/scrolling/ScrollingCoordinator.cpp:224 > + return renderView->compositor().headerLayer();
LOL.
Beth Dakin
Comment 4
2014-05-11 14:05:19 PDT
Thanks, Tim!
http://trac.webkit.org/changeset/168602
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug